fix database migration for bootstrap

--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -14,7 +14,7 @@
     ]
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=localhost;Initial Catalog=GamifyWorkout;TrustServerCertificate=true;Integrated Security=true;",
+    "DefaultConnection": "Data Source=localhost;Initial Catalog=DotNetBootstrap;TrustServerCertificate=true;Integrated Security=true;",
     "AzureBlobStorage": "DefaultEndpointsProtocol=https;AccountName=gamifyworkoutstorage;AccountKey=secretkey;EndpointSuffix=core.windows.net"
   }
 }
